# distri

./: .gitignore  Cargo.toml  README.md  discog format.md  discog-example.json  rustfmt.toml
src/: color.rs  css.rs  date.rs  duration.rs  fileops.rs  globals.rs  homepage.rs  icons.rs  imagedeal.rs  language.rs  linkpage.rs  lyric.rs  main.rs  minify.rs  musicdata.rs  rclone.rs  rss.rs  smartquotes.rs  url.rs  wrangle.rs  xml.rs  zipper.rs
src/assets/: 404.html  homepage-css-nuke.js  homepage-rhombus-min.js  homepage-rhombus.js  homepage-style.css  homepage-styles.css  linkpage-style.css  lyricpage-script.js  lyricpage-style.css
src/media/: album.rs  artwork.rs  assist.rs  audiocodec.rs  lyric.rs  mod.rs  song.rs  titlable.rs
src/types/: color.rs  date.rs  duration.rs  genre.rs  isrc.rs  mod.rs  upc.rs  urlset.rs
