[package]
name = "distri"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
symphonia = { version = "0.5", default-features = false, features = ["wav", "flac"] }
cached = "0.56.0"
id3 = "1.16.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
itertools = "0.14.0"
maud = "0.27.0"
metaflac = "0.2.8"
regex = "1.12.2"
serde_json = "1.0"
unicode-normalization = "0.1.25"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.38.4"
xml-macro = "0.3.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false
rpath = false
